--- a/views/appointment_doctor_view.xml
+++ b/views/appointment_doctor_view.xml
@@ -30,6 +30,7 @@
                                 <field name="login"
                                         placeholder="email@yourcompany.com"/>
                             </h2>
+                            <field name="documento" required="1"/>
                         </div>
                         <group>
                             <field name="phone" widget="phone"/>
