--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -146,16 +146,21 @@
                         <small class="text-muted">Cita - </small><span t-field="appointment.name"/>
                         <span class="float-right">
                             <t t-if="appointment.state == 'cancel'">
-                                <small class="text-muted">Estado - </small><span t-field="appointment.name"/>
-                                <span class="badge badge-pill badge-info">Cancelada</span>
+                                <small class="text-muted">Estado - </small><span class="badge badge-pill badge-info">Cancelada</span>
+
                             </t>
                             <t t-if="appointment.state == 'pending'">
-                                <small class="text-muted">Estado - </small><span t-field="appointment.name"/>
-                                <span class="badge badge-pill badge-danger">Pendiente</span>
+                                <small class="text-muted">Estado - </small><span class="badge badge-pill badge-danger">Pendiente</span>
+
                             </t>
                             <t t-if="appointment.state == 'valid'">
-                                <small class="text-muted">Estado - </small><span t-field="appointment.name"/>
-                                <span class="badge badge-pill badge-info">Confirmada</span>
+                                <small class="text-muted">Estado - </small><span class="badge badge-pill badge-info">Confirmada</span>
+                            </t>
+                            <t t-if="appointment.state == 'iniciada'">
+                                <small class="text-muted">Estado - </small><span class="badge badge-pill badge-warning">Iniciada</span>
+                            </t>
+                            <t t-if="appointment.state == 'finish'">
+                                <small class="text-muted">Estado - </small><span class="badge badge-pill badge-warning">Finalizada</span>
                             </t>
                         </span>
                     </h5>
@@ -164,7 +169,7 @@
                     <div class="row">
                         <t t-if="appointment.sudo().partner_id.id == request.env.user.partner_id.id">
                             <div t-if="appointment.partner_id" class="col-12 col-md-6 mb-2 mb-md-0">
-                                <h6>You</h6>
+                                <h6>Ustéd</h6>
                                 <div class="row">
                                     <div class="col flex-grow-0 pr-3">
                                         <img t-if="appointment.partner_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.partner_id.image_1024)" alt="Contact"/>
@@ -176,7 +181,7 @@
                                 </div>
                             </div>
                             <div t-if="appointment.appointee_id" class="col-12 col-md-6">
-                                <h6>With</h6>
+                                <h6>Doctor</h6>
                                 <div class="row">
                                     <div class="col flex-grow-0 pr-3">
                                         <img t-if="appointment.appointee_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.appointee_id.image_1024)" alt="Appointee"/>
