--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -167,33 +167,37 @@
                 </t>
                 <t t-set="card_body">
                     <div class="row">
-                        <t t-if="appointment.sudo().partner_id.id == request.env.user.partner_id.id">
-                          <div t-if="appointment.appointee_id" class="col-12 col-md-6">
-                                <h6>Tú</h6>
-                                <div class="row">
-                                    <div class="col flex-grow-0 pr-3">
-                                        <img t-if="appointment.appointee_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.appointee_id.image_1024)" alt="Appointee"/>
-                                        <img t-else="" class="rounded-circle mt-1 o_portal_contact_img" src="/web/static/src/img/user_menu_avatar.png" alt="Contact"/>
-                                    </div>
-                                    <div class="col pl-sm-0">
-                                        <address t-field="appointment.appointee_id" t-options='{"widget": "contact", "fields": ["name", "email", "phone"]}'/>
-                                    </div>
-                                </div>
-                            </div>
-                            <div t-if="appointment.partner_id" class="col-12 col-md-6 mb-2 mb-md-0">
-                                <h6>Doctor Asignado</h6>
-                                <div class="row">
-                                    <div class="col flex-grow-0 pr-3">
-                                        <img t-if="appointment.partner_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.partner_id.image_1024)" alt="Contact"/>
-                                        <img t-else="" class="rounded-circle mt-1 o_portal_contact_img" src="/web/static/src/img/user_menu_avatar.png" alt="Contact"/>
-                                    </div>
-                                    <div class="col pl-sm-0">
-                                        <address t-field="appointment.partner_id" t-options='{"widget": "contact", "fields": ["name", "email", "phone"]}'/>
+                        <div class="col-6">
+                            <t t-if="appointment.sudo().partner_id.id == request.env.user.partner_id.id">
+                                <div t-if="appointment.appointee_id" class="col-12 col-md-6">
+                                    <h6>Tú</h6>
+                                    <div class="row">
+                                        <div class="col flex-grow-0 pr-3">
+                                            <img t-if="appointment.appointee_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.appointee_id.image_1024)" alt="Appointee"/>
+                                            <img t-else="" class="rounded-circle mt-1 o_portal_contact_img" src="/web/static/src/img/user_menu_avatar.png" alt="Contact"/>
+                                        </div>
+                                        <div class="col pl-sm-0">
+                                            <address t-field="appointment.appointee_id" t-options='{"widget": "contact", "fields": ["name", "email", "phone"]}'/>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </t>
+                                <div t-if="appointment.partner_id" class="col-12 col-md-6 mb-2 mb-md-0">
+                                    <h6>Doctor Asignado</h6>
+                                    <div class="row">
+                                        <div class="col flex-grow-0 pr-3">
+                                            <img t-if="appointment.partner_id.image_1024" class="rounded-circle mt-1 o_portal_contact_img" t-att-src="image_data_uri(appointment.partner_id.image_1024)" alt="Contact"/>
+                                            <img t-else="" class="rounded-circle mt-1 o_portal_contact_img" src="/web/static/src/img/user_menu_avatar.png" alt="Contact"/>
+                                        </div>
+                                        <div class="col pl-sm-0">
+                                            <address t-field="appointment.partner_id" t-options='{"widget": "contact", "fields": ["name", "email", "phone"]}'/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </t>
+                        </div>
+                        <div class="col-6">
 
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
