--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -197,16 +197,22 @@
                             </t>
                         </div>
                         <div class="col-6">
-                            <div class="col-12 col-md-6 mb-2 mb-md-0">
-                                <h6>Hora de inicio</h6>
+                            <div class="col-12  mb-2 mb-md-0">
+                                <h6>Fecha</h6>
                                 <div class="row">
                                     <div class="col flex-grow-1 pr-3"><b><span t-field="appointment.appointment_begin" /></b></div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6">
-                                <h6>Hasta</h6>
+                            <div class="col-12">
+                                <h6>Hora</h6>
                                 <div clas="row">
                                     <div class="col flex-grow-1 pr-3"><b><span t-field="appointment.appointment_end" /></b></div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <h6>Duracion</h6>
+                                <div clas="row">
+                                   <b>30 minutos.</b>
                                 </div>
                             </div>
                         </div>
