--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -71,13 +71,13 @@
                                 <tbody>
                                     <tr t-foreach="appointments" t-as="appointment">
                                         <td>
-                                            <a t-attf-href="/my/online-appointment/#{appointment.id}?{{ keep_query() }}"><span t-field="appointment.name"/></a>
+                                            <span t-field="appointment.name"/>
                                         </td>
-                                        <td t-if="appointment.sudo().partner_id.id == request.env.user.partner_id.id">
-                                            With: <span t-field="appointment.sudo().appointee_id.name" />
+                                        <td t-if="appointment.appointee_id">
+                                            Doctor: <span t-field="appointment.sudo().appointee_id.name" />
                                         </td>
                                         <td t-else="">
-                                            With: <span t-field="appointment.sudo().partner_id.name" />
+                                            N/A
                                         </td>
                                         <td class="text-right">
                                             <span t-field="appointment.appointment_begin" />
