re-udpate ... u.u view of appointment frontend

--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -94,6 +94,9 @@
                                         <td t-if="appointment.state == 'valid'">
                                             <span class="badge badge-pill badge-info">Confirmada</span>
                                         </td>
+                                        <td>
+                                            <a t-attf-href="/my/online-appointment/#{appointment.id}?{{ keep_query() }}">Ver cita</a>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </t>
