--- a/views/appointment_template.xml
+++ b/views/appointment_template.xml
@@ -117,7 +117,7 @@
                                    </t>
                                    <div class="form-group col-lg-12 text-center">
                                        <div>
-                                           <button class="btn btn-success">Continuar agendamiento</button>
+                                           <button class="btn btn-primary">Continuar agendamiento</button>
                                        </div>
                                    </div>
                                </div>
