--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -80,10 +80,10 @@
                                             <p style="font-size:12px;">Doctor por asignar</p>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="appointment.appointment_begin.strftime('%Y-%m-%d')"/>
+                                            <span t-field="appointment.appointment_begin"/>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="appointment.appointment_end.strftime('%H:%M')"/>
+                                            <span t-field="appointment.appointment_end"/>
                                         </td>
                                         <td t-if="appointment.state == 'cancel'">
                                             <span class="badge badge-pill badge-info">Cancelada</span>
